objects/TariffCheck__mdt.object
<CustomObject>
    <fields>
        <fullName>BU_Name__c</fullName>
        <label>BU Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tariff_Rate__c</fullName>
        <label>Tariff Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>TariffCheck</label>
    <pluralLabel>TariffChecks</pluralLabel>
</CustomObject>